updated dnsmasq config to current

--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -142,7 +142,7 @@ bind-interfaces
 # 2) Sets the "domain" DHCP option thereby potentially setting the
 #    domain of all systems configured by DHCP
 # 3) Provides the domain part for "expand-hosts"
-#domain=thekelleys.org.uk
+domain=openshift4poc.example.local
 
 # Set a different domain for a particular subnet
 #domain=wireless.thekelleys.org.uk,192.168.2.0/24
@@ -343,9 +343,11 @@ dhcp-option=3
 # Set the NTP time server addresses to 192.168.0.4 and 10.10.0.5
 #dhcp-option=option:ntp-server,192.168.0.4,10.10.0.5
 dhcp-option=option:dns-server,172.16.1.1
-dhcp-host=00:15:5D:B7:25:0C,master1,172.16.1.10
-dhcp-host=00:15:5D:B7:25:0D,master2,172.16.1.11
-dhcp-host=00:15:5D:B7:25:0E,master3,172.16.1.12
+dhcp-host=00:15:5D:B7:25:12,master1,172.16.1.10
+dhcp-host=00:15:5D:B7:25:13,master2,172.16.1.11
+dhcp-host=00:15:5D:B7:25:14,master3,172.16.1.13
+dhcp-host=00:15:5D:B7:25:15,worker1,172.16.1.14
+dhcp-host=00:15:5D:B7:25:11,bootstrap,172.16.1.20
 
 # Send DHCPv6 option. Note [] around IPv6 addresses.
 #dhcp-option=option6:dns-server,[1234::77],[1234::88]
@@ -404,7 +406,7 @@ dhcp-host=00:15:5D:B7:25:0E,master3,172.16.1.12
 
 # Send RFC-3397 DNS domain search DHCP option. WARNING: Your DHCP client
 # probably doesn't support this......
-#dhcp-option=option:domain-search,eng.apple.com,marketing.apple.com
+dhcp-option=option:domain-search,openshift4poc.example.local
 
 # Send RFC-3442 classless static routes (note the netmask encoding)
 #dhcp-option=121,192.168.1.0/24,1.2.3.4,10.0.0.0/8,5.6.7.8
