add bogus default route so that NetworkManager keeps the hostname and change domain
Ratehr than using .local which is reserved for mDNS, use .test which is reserved for testing

--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -80,7 +80,7 @@ bogus-priv
 
 # --address (and --server) work with IPv6 addresses too.
 #address=/www.thekelleys.org.uk/fe80::20d:60ff:fe36:f83
-address=/apps.openshift4poc.example.local/172.16.1.2
+address=/apps.openshift4poc.example.test/172.16.1.2
 
 # Add the IPs of all queries to yahoo.com, google.com, and their
 # subdomains to the vpn and search ipsets:
@@ -142,7 +142,7 @@ bind-interfaces
 # 2) Sets the "domain" DHCP option thereby potentially setting the
 #    domain of all systems configured by DHCP
 # 3) Provides the domain part for "expand-hosts"
-domain=openshift4poc.example.local
+domain=openshift4poc.example.test
 
 # Set a different domain for a particular subnet
 #domain=wireless.thekelleys.org.uk,192.168.2.0/24
@@ -329,7 +329,7 @@ dhcp-range=172.16.1.100,172.16.1.150,255.255.255.0,12h
 
 # Override the default route supplied by dnsmasq, which assumes the
 # router is the same machine as the one running dnsmasq.
-dhcp-option=3
+dhcp-option=3,172.16.1.254
 
 # Do the same thing, but using the option name
 #dhcp-option=option:router,1.2.3.4
@@ -406,7 +406,7 @@ dhcp-host=00:15:5D:B7:25:11,bootstrap,172.16.1.20
 
 # Send RFC-3397 DNS domain search DHCP option. WARNING: Your DHCP client
 # probably doesn't support this......
-dhcp-option=option:domain-search,openshift4poc.example.local
+dhcp-option=option:domain-search,openshift4poc.example.test
 
 # Send RFC-3442 classless static routes (note the netmask encoding)
 #dhcp-option=121,192.168.1.0/24,1.2.3.4,10.0.0.0/8,5.6.7.8
@@ -626,9 +626,9 @@ dhcp-authoritative
 # ldapserver.example.com port 389 (using domain=)
 #domain=example.com
 #srv-host=_ldap._tcp,ldapserver.example.com,389
-srv-host=_etcd-server-ssl._tcp.openshift4poc.example.local,etcd-0.openshift4poc.example.local,2380,0,10
-srv-host=_etcd-server-ssl._tcp.openshift4poc.example.local,etcd-1.openshift4poc.example.local,2380,0,10
-srv-host=_etcd-server-ssl._tcp.openshift4poc.example.local,etcd-2.openshift4poc.example.local,2380,0,10
+srv-host=_etcd-server-ssl._tcp.openshift4poc.example.test,etcd-0.openshift4poc.example.test,2380,0,10
+srv-host=_etcd-server-ssl._tcp.openshift4poc.example.test,etcd-1.openshift4poc.example.test,2380,0,10
+srv-host=_etcd-server-ssl._tcp.openshift4poc.example.test,etcd-2.openshift4poc.example.test,2380,0,10
 
 # Two SRV records for LDAP, each with different priorities
 #srv-host=_ldap._tcp.example.com,ldapserver.example.com,389,1
